young gc